--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -268,9 +268,30 @@
         </div>
     </section>
     <section id="news">
-        <h1 class="c-title u-font-red">お知らせ</h1>
+        <div class="main-wrapper">
+            <h1 class="c-title u-font--white">お知らせ</h1>
+            <table class="news__table">
+                <tr>
+                    <td class="news__date u-font--white u-font--bold"><a>2022.01.01&nbsp;&nbsp;&nbsp;&nbsp;</a></td>
+                    <td class="news__text u-font--white u-font--bold"><a>卒業生のケニーさんによるyoutubeサムネイル講座が始まります。</a></td>
+                </tr>
+                <tr>
+                    <td class="news__date u-font--white u-font--bold"><a>2022.01.01&nbsp;&nbsp;&nbsp;&nbsp;</a></td>
+                    <td class="news__text u-font--white u-font--bold"><a>専用アプリから予約できるようになりました。</a></td>
+                </tr>
+                <tr>
+                    <td class="news__date u-font--white u-font--bold"><a>2022.01.01&nbsp;&nbsp;&nbsp;&nbsp;</a></td>
+                    <td class="news__text u-font--white u-font--bold"><a>あけましておめでとうございます。</a></td>
+                </tr>
+                <tr>
+                    <td colspan="2" class="news__forward u-font--white"><a href="#">お知らせ一覧へ</a></td>
+                </tr>
+            </table>
+        </div>
     </section>
-    <section id="blog"></section>
+    <section id="blog">
+        <h1 class="c-title">ブログ</h1>
+    </section>
     <footer class="footer"></footer>
     <!-- js -->
     <script src="./js/jquery-3.6.0.min.js"></script>
