--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -289,10 +289,60 @@
             </table>
         </div>
     </section>
-    <section id="blog">
-        <h1 class="c-title">ブログ</h1>
+    <section id="blog" class="main-wrapper">
+        <h1 class="blog__title">ブログ</h1>
+        <div class="blog__contents">
+            <div class="c-card blog__card">
+                <a href="#">
+                    <div class="c-card__img-container">
+                        <div class="c-card__label blog__card__label">SNS</div>
+                        <img src="../img/SP/top/blog01.png"
+                            srcset="../img/SP/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                            class="c-card__img blog__card__img no-pc">
+                        <img src="../img/PC/top/blog01.png"
+                            srcset="../img/PC/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                            class="c-card__img blog__card__img pc">
+                    </div>
+                    <h2 class="c-card__title blog__card__title">フォロワーではなくファンを増やせとは？</h2>
+                    <p class="c-card__date blog__card__date">2022.01.01</p>
+                </a>
+            </div>
+            <div class="c-card blog__card">
+                <a href="#">
+                    <div class="c-card__img-container">
+                        <div class="c-card__label blog__card__label">集客方法</div>
+                        <img src="../img/SP/top/blog02.png"
+                            srcset="../img/SP/top/blog02.png 1x, ../img/SP/top/blog02@2x.png 2x" alt="ブログ画像02"
+                            class="c-card__img blog__card__img no-pc">
+                        <img src="../img/PC/top/blog02.png"
+                            srcset="../img/PC/top/blog02.png 1x, ../img/PC/top/blog02@2x.png 2x" alt="ブログ画像02"
+                            class="c-card__img blog__card__img pc">
+                    </div>
+                    <h2 class="c-card__title blog__card__title">集客してる間は売れないという法則</h2>
+                    <p class="c-card__date blog__card__date">2022.01.01</p>
+                </a>
+            </div>
+            <div class="c-card blog__card">
+                <a href="#">
+                    <div class="c-card__img-container">
+                        <div class="c-card__label blog__card__label">ギター</div>
+                        <img src="../img/SP/top/blog03.png"
+                            srcset="../img/SP/top/blog03.png 1x, ../img/SP/top/blog03@2x.png 2x" alt="ブログ画像03"
+                            class="c-card__img blog__card__img no-pc">
+                        <img src="../img/PC/top/blog03.png"
+                            srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像03"
+                            class="c-card__img blog__card__img pc">
+                    </div>
+                    <h2 class="c-card__title blog__card__title">アルペジオが劇的に向上する3つの習慣</h2>
+                    <p class="c-card__date blog__card__date">2022.01.01</p>
+                </a>
+            </div>
+        </div>
+        <a href="#" class="blog__forward">ブログ一覧へ</a>
     </section>
-    <footer class="footer"></footer>
+    <footer class="footer">
+
+    </footer>
     <!-- js -->
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./lib/slick.min.js"></script>
