--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -289,60 +289,82 @@
             </table>
         </div>
     </section>
-    <section id="blog" class="main-wrapper">
-        <h1 class="blog__title">ブログ</h1>
-        <div class="blog__contents">
-            <div class="c-card blog__card">
-                <a href="#">
-                    <div class="c-card__img-container">
-                        <div class="c-card__label blog__card__label">SNS</div>
-                        <img src="../img/SP/top/blog01.png"
-                            srcset="../img/SP/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
-                            class="c-card__img blog__card__img no-pc">
-                        <img src="../img/PC/top/blog01.png"
-                            srcset="../img/PC/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
-                            class="c-card__img blog__card__img pc">
-                    </div>
-                    <h2 class="c-card__title blog__card__title">フォロワーではなくファンを増やせとは？</h2>
-                    <p class="c-card__date blog__card__date">2022.01.01</p>
-                </a>
+    <section id="blog">
+        <div class="main-wrapper">
+            <h1 class="blog__title">ブログ</h1>
+            <div class="blog__contents">
+                <div class="c-card blog__card">
+                    <a href="#">
+                        <div class="c-card__img-container">
+                            <div class="c-card__label blog__card__label">SNS</div>
+                            <img src="../img/SP/top/blog01.png"
+                                srcset="../img/SP/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                                class="c-card__img blog__card__img no-pc">
+                            <img src="../img/PC/top/blog01.png"
+                                srcset="../img/PC/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                                class="c-card__img blog__card__img pc">
+                        </div>
+                        <h2 class="c-card__title blog__card__title">フォロワーではなくファンを増やせとは？</h2>
+                        <p class="c-card__date blog__card__date">2022.01.01</p>
+                    </a>
+                </div>
+                <div class="c-card blog__card">
+                    <a href="#">
+                        <div class="c-card__img-container">
+                            <div class="c-card__label blog__card__label">集客方法</div>
+                            <img src="../img/SP/top/blog02.png"
+                                srcset="../img/SP/top/blog02.png 1x, ../img/SP/top/blog02@2x.png 2x" alt="ブログ画像02"
+                                class="c-card__img blog__card__img no-pc">
+                            <img src="../img/PC/top/blog02.png"
+                                srcset="../img/PC/top/blog02.png 1x, ../img/PC/top/blog02@2x.png 2x" alt="ブログ画像02"
+                                class="c-card__img blog__card__img pc">
+                        </div>
+                        <h2 class="c-card__title blog__card__title">集客してる間は売れないという法則</h2>
+                        <p class="c-card__date blog__card__date">2022.01.01</p>
+                    </a>
+                </div>
+                <div class="c-card blog__card">
+                    <a href="#">
+                        <div class="c-card__img-container">
+                            <div class="c-card__label blog__card__label">ギター</div>
+                            <img src="../img/SP/top/blog03.png"
+                                srcset="../img/SP/top/blog03.png 1x, ../img/SP/top/blog03@2x.png 2x" alt="ブログ画像03"
+                                class="c-card__img blog__card__img no-pc">
+                            <img src="../img/PC/top/blog03.png"
+                                srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像03"
+                                class="c-card__img blog__card__img pc">
+                        </div>
+                        <h2 class="c-card__title blog__card__title">アルペジオが劇的に向上する3つの習慣</h2>
+                        <p class="c-card__date blog__card__date">2022.01.01</p>
+                    </a>
+                </div>
             </div>
-            <div class="c-card blog__card">
-                <a href="#">
-                    <div class="c-card__img-container">
-                        <div class="c-card__label blog__card__label">集客方法</div>
-                        <img src="../img/SP/top/blog02.png"
-                            srcset="../img/SP/top/blog02.png 1x, ../img/SP/top/blog02@2x.png 2x" alt="ブログ画像02"
-                            class="c-card__img blog__card__img no-pc">
-                        <img src="../img/PC/top/blog02.png"
-                            srcset="../img/PC/top/blog02.png 1x, ../img/PC/top/blog02@2x.png 2x" alt="ブログ画像02"
-                            class="c-card__img blog__card__img pc">
-                    </div>
-                    <h2 class="c-card__title blog__card__title">集客してる間は売れないという法則</h2>
-                    <p class="c-card__date blog__card__date">2022.01.01</p>
-                </a>
-            </div>
-            <div class="c-card blog__card">
-                <a href="#">
-                    <div class="c-card__img-container">
-                        <div class="c-card__label blog__card__label">ギター</div>
-                        <img src="../img/SP/top/blog03.png"
-                            srcset="../img/SP/top/blog03.png 1x, ../img/SP/top/blog03@2x.png 2x" alt="ブログ画像03"
-                            class="c-card__img blog__card__img no-pc">
-                        <img src="../img/PC/top/blog03.png"
-                            srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像03"
-                            class="c-card__img blog__card__img pc">
-                    </div>
-                    <h2 class="c-card__title blog__card__title">アルペジオが劇的に向上する3つの習慣</h2>
-                    <p class="c-card__date blog__card__date">2022.01.01</p>
-                </a>
-            </div>
+            <a href="#" class="blog__forward">ブログ一覧へ</a>
         </div>
-        <a href="#" class="blog__forward">ブログ一覧へ</a>
     </section>
-    <footer class="footer">
-
+    <footer id="footer">
+        <div class="main-wrapper footer-wrapper">
+            <nav class="footer__nav">
+                <li><a href="#" class="u-font--white u-font--bold footer__nav__item">ホーム</a></li>
+                <li><a href="#" class="u-font--white u-font--bold footer__nav__item">料金</a></li>
+                <li><a href="#" class="u-font--white u-font--bold footer__nav__item">ブログ</a></li>
+                <li><a href="#" class="u-font--white u-font--bold footer__nav__item">お知らせ</a></li>
+                <li><a href="#" class="u-font--white u-font--bold footer__nav__item">卒業実績</a></li>
+            </nav>
+            <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
+            <small class="copyright u-font--white">
+                Copyright © 2021 KITAMURA music school Inc. All Rights
+            </small>
+            <nav class="footer__sns__nav">
+                <li><a href="#"><img src="../img/icon/twitter.svg" alt="twitter"></a></li>
+                <li><a href="#"><img src="../img/icon/facebook.svg" alt="facebook"></a></li>
+                <li><a href="#"><img src="../img/icon/youtube.svg" alt="youtube"></a></li>
+                <li><a href="#"><img src="../img/icon/instagram.svg" alt="instagram"></a></li>
+            </nav>
+        </div>
     </footer>
+    <button class="c-button c-button--circle c-button--gray"></button>
+    <button class="c-button--red c-button--mid c-button--fixed-right pc">お問い合わせ</button>
     <!-- js -->
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./lib/slick.min.js"></script>
