--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -36,7 +36,7 @@
         </div>
         <nav class="c-nav pc header__nav">
             <ul class="c-nav-list">
-                <li><a href="#fee" class="nav-item">料金</a></li>
+                <li><a href="./plan.html" class="nav-item">料金</a></li>
                 <li><a href="#blog" class="nav-item">ブログ</a></li>
                 <li><a href="#information" class="nav-item">お知らせ</a></li>
                 <li><a href="#result" class="nav-item"></a>卒業実績</li>
@@ -49,7 +49,7 @@
     <div class="c-hamburger-menu">
         <nav class="hamburger-nav">
             <ul class="hamburger-list">
-                <li><a href="#fee" class="c-hamburger-item hamburger-trigger">料金</a></li>
+                <li><a href="./plan.html" class="c-hamburger-item hamburger-trigger">料金</a></li>
                 <li><a href="#blog" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
                 <li><a href="#information" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
                 <li><a href="#result" class="c-hamburger-item hamburger-trigger">卒業実績</a></li>
@@ -341,30 +341,44 @@
             </div>
             <a href="#" class="blog__forward">ブログ一覧へ</a>
         </div>
+        <div class="pc u-pos-fixed u-bottom-0 u-right-0 js-fixed-btn-pc">
+            <button class="c-button u-mr-100 u-ml-auto js-go-top">
+                <img src="./img/icon/to-top.svg" alt="トップへ戻る">
+            </button>
+            <button class="c-button--red c-button--mid">お問い合わせ</button>
+        </div>
+        <div class="no-pc u-pos-fixed u-l-50 u-bottom-0 js-fixed-btn-no-pc">
+            <button class="c-button u-m-auto js-go-top">
+                <img src="./img/icon/to-top.svg" alt="トップへ戻る">
+            </button>
+            <button class="c-button--red c-button--mid">お問い合わせ</button>
+        </div>
     </section>
     <footer id="footer">
         <div class="main-wrapper footer-wrapper">
             <nav class="footer__nav">
-                <li><a href="#" class="u-font--white u-font--bold footer__nav__item">ホーム</a></li>
-                <li><a href="#" class="u-font--white u-font--bold footer__nav__item">料金</a></li>
-                <li><a href="#" class="u-font--white u-font--bold footer__nav__item">ブログ</a></li>
-                <li><a href="#" class="u-font--white u-font--bold footer__nav__item">お知らせ</a></li>
-                <li><a href="#" class="u-font--white u-font--bold footer__nav__item">卒業実績</a></li>
+                <ul>
+                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">ホーム</a></li>
+                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">料金</a></li>
+                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">ブログ</a></li>
+                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">お知らせ</a></li>
+                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">卒業実績</a></li>
+                </ul>
             </nav>
             <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
             <small class="copyright u-font--white">
                 Copyright © 2021 KITAMURA music school Inc. All Rights
             </small>
             <nav class="footer__sns__nav">
-                <li><a href="#"><img src="../img/icon/twitter.svg" alt="twitter"></a></li>
-                <li><a href="#"><img src="../img/icon/facebook.svg" alt="facebook"></a></li>
-                <li><a href="#"><img src="../img/icon/youtube.svg" alt="youtube"></a></li>
-                <li><a href="#"><img src="../img/icon/instagram.svg" alt="instagram"></a></li>
+                <ul>
+                    <li><a href="#"><img src="../img/icon/twitter.svg" alt="twitter"></a></li>
+                    <li><a href="#"><img src="../img/icon/facebook.svg" alt="facebook"></a></li>
+                    <li><a href="#"><img src="../img/icon/youtube.svg" alt="youtube"></a></li>
+                    <li><a href="#"><img src="../img/icon/instagram.svg" alt="instagram"></a></li>
+                </ul>
             </nav>
         </div>
     </footer>
-    <button class="c-button c-button--circle c-button--gray"></button>
-    <button class="c-button--red c-button--mid c-button--fixed-right pc">お問い合わせ</button>
     <!-- js -->
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./lib/slick.min.js"></script>
