--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="c-hamburger-bg hamburger-trigger">
     </div>
-    <section id="top">
+    <section id="top" class="js-fv">
         <div class="top__fv-img">
             <h1 class="top__message">
                 「音楽で生きる」<br class="no-pc">を叶える<br>ミュージックスクール
@@ -345,21 +345,21 @@
             <button class="c-button u-mr-100 u-ml-auto js-go-top">
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
-            <button class="c-button--red c-button--mid">お問い合わせ</button>
+            <button class="c-button--red c-button--mid u-mt-31">お問い合わせ</button>
         </div>
         <div class="no-pc u-pos-fixed u-l-50 u-bottom-0 js-fixed-btn-no-pc">
-            <button class="c-button u-m-auto js-go-top">
+            <button class="c-button u-ml-auto js-go-top">
                 <img src="./img/icon/to-top.svg" alt="トップへ戻る">
             </button>
-            <button class="c-button--red c-button--mid">お問い合わせ</button>
+            <button class="c-button--red c-button--mid u-mt-19">お問い合わせ</button>
         </div>
     </section>
     <footer id="footer">
         <div class="main-wrapper footer-wrapper">
             <nav class="footer__nav">
                 <ul>
-                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">ホーム</a></li>
-                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">料金</a></li>
+                    <li><a href="./index.html" class="u-font--white u-font--bold footer__nav__item">ホーム</a></li>
+                    <li><a href="./plan.html" class="u-font--white u-font--bold footer__nav__item">料金</a></li>
                     <li><a href="#" class="u-font--white u-font--bold footer__nav__item">ブログ</a></li>
                     <li><a href="#" class="u-font--white u-font--bold footer__nav__item">お知らせ</a></li>
                     <li><a href="#" class="u-font--white u-font--bold footer__nav__item">卒業実績</a></li>
