--- a/MusicSchool/_static/src/plan.html
+++ b/MusicSchool/_static/src/plan.html
@@ -38,25 +38,176 @@
         </div>
         <nav class="c-nav pc header__nav">
             <ul class="c-nav-list">
-                <li><a href="#fee" class="nav-item">料金</a></li>
-                <li><a href="#blog" class="nav-item">ブログ</a></li>
-                <li><a href="#information" class="nav-item">お知らせ</a></li>
-                <li><a href="#result" class="nav-item"></a>卒業実績</li>
+                <li><a href="./plan.html" class="nav-item">料金</a></li>
+                <li><a href="./blog_list.html" class="nav-item">ブログ</a></li>
+                <li><a href="./notice_list.html" class="nav-item">お知らせ</a></li>
+                <li><a href="./result_list.html" class="nav-item"></a>卒業実績</li>
             </ul>
         </nav>
         <button class="pc c-button c-button--red c-button--small header__button">
             お問い合わせ
         </button>
     </header>
+    <div class="c-hamburger-menu">
+        <nav class="hamburger-nav">
+            <ul class="hamburger-list">
+                <li><a href="./plan.html" class="c-hamburger-item hamburger-trigger">料金</a></li>
+                <li><a href="#blog" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
+                <li><a href="#information" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
+                <li><a href="#result" class="c-hamburger-item hamburger-trigger">卒業実績</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="c-hamburger-bg hamburger-trigger">
+    </div>
+    <section id="plan-fv" class="js-fv">
+        <div class="plan__fv-img">
+            <h1 class="plan__message u-font--white u-font--bold">
+                プラン・料金
+            </h1>
+        </div>
+    </section>
+    <nav class="c-breadcrumb">
+        <ul>
+            <li>
+                <a href="#">ホーム</a>
+            </li>
+            <li>
+                <a href="#">プラン・料金</a>
+            </li>
+        </ul>
+    </nav>
+    <section id="fee" class="main-wrapper">
+        <h1 class="plan__title">料金体系</h1>
+        <div class="fee__contents">
+            <div class="fee__item fee__item--red u-font--bold">入会金 39,000円</div>
+            <div class="fee__item"><img src="./img/icon/plus.svg" alt="プラス"></div>
+            <div class="fee__item fee__item--red u-font--bold">月額料金</div>
+        </div>
+        <p class="fee__text">
+            きたむらミュージックスクールでは、個人に合わせたサポートを行う完全オーダーメイドのプランを用意しており、サポート内容により月額料金が異なります。担当者があなたに最適なプランを提案いたしますので、お気軽にお問い合わせください。※すべての料金は税込価格となります。
+        </p>
+    </section>
+    <section id="monthly-plan" class="main-wrapper">
+        <h1 class="plan__title">プラン内容・月額料金</h1>
+        <div class="plan__table">
+            <table>
+                <thead>
+                    <tr>
+                        <th class="plan__th-sticky"></th>
+                        <th></th>
+                        <th rowspan="2" class="plan__th-red"><span>おすすめ</span>スタンダード<br class="no-pc">プラン</th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th class="plan__th-black">ベーシック<br class="no-pc">プラン</th>
+                        <th class="plan__th-black">プレミアム<br class="no-pc">プラン</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th class="plan__th u-font--bold plan__th-sticky">月額料金</th>
+                        <td class="plan__td--strong u-font--bold">39,000円</td>
+                        <td class="plan__td--strong u-font--bold u-font--red">59,000円</td>
+                        <td class="plan__td--strong u-font--bold">128,000円</td>
+                    </tr>
+                    <tr>
+                        <th class="plan__th plan__th-sticky">マンツーマン授業</th>
+                        <td>
+                            <img src="./img/icon/table-circle-black.svg" alt="circle-black">
+                            <p class="plan__td__text">週１回</p>
+                        </td>
+                        <td>
+                            <img src="./img/icon/table-circle-red.svg" alt="circle-red">
+                            <p class="plan__td__text">週２回</p>
+                        </td>
+                        <td>
+                            <img src="./img/icon/table-circle-black.svg" alt="circle-black">
+                            <p class="plan__td__text">無制限</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="plan__th plan__th-sticky">ビジネス基本講座</th>
+                        <td>
+                            <img src="./img/icon/table-circle-black.svg" alt="circle-black">
+                        </td>
+                        <td>
+                            <img src="./img/icon/table-circle-red.svg" alt="circle-red">
+                        </td>
+                        <td>
+                            <img src="./img/icon/table-circle-black.svg" alt="circle-black">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="plan__th plan__th-sticky">練習ROOM利用</th>
+                        <td>
+                            <img src="./img/icon/table-circle-black.svg" alt="circle-black">
+                            <p class="plan__td__text">月10時間</p>
+                        </td>
+                        <td>
+                            <img src="./img/icon/table-circle-red.svg" alt="circle-red">
+                            <p class="plan__td__text">月20時間</p>
+                        </td>
+                        <td>
+                            <img src="./img/icon/table-circle-black.svg" alt="circle-black">
+                            <p class="plan__td__text">無制限</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="plan__th plan__th-sticky">ビジネスコンサル</th>
+                        <td>
+                            <img src="./img/icon/table-hyphen.svg" alt="hyphen" class="plan__td__hyphen">
+                        </td>
+                        <td>
+                            <img src="./img/icon/table-circle-red.svg" alt="circle-red">
+                            <p class="plan__td__text">月２回</p>
+                        </td>
+                        <td>
+                            <img src="./img/icon/table-circle-black.svg" alt="circle-black">
+                            <p class="plan__td__text">月３回</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="plan__th plan__th-sticky">コミュニティ<br class="no-pc">参加資格</th>
+                        <td>
+                            <img src="./img/icon/table-hyphen.svg" alt="hyphen" class="plan__td__hyphen">
+                        </td>
+                        <td>
+                            <img src="./img/icon/table-hyphen.svg" alt="hyphen" class="plan__td__hyphen">
+                        </td>
+                        <td>
+                            <img src="./img/icon/table-circle-black.svg" alt="circle-black">
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <p class="plan__additional">
+            ※各サービスは１回ごとのオプション追加が可能です。詳しくは事務局までお問い合わせください。
+        </p>
+        <div class="pc u-pos-fixed u-bottom-0 u-right-0 js-fixed-btn-pc">
+            <button class="c-button u-mr-100 u-ml-auto js-go-top">
+                <img src="./img/icon/to-top.svg" alt="トップへ戻る">
+            </button>
+            <button class="c-button--red c-button--mid">お問い合わせ</button>
+        </div>
+        <div class="no-pc u-pos-fixed u-l-50 u-bottom-0 js-fixed-btn-no-pc">
+            <button class="c-button u-ml-auto js-go-top">
+                <img src="./img/icon/to-top.svg" alt="トップへ戻る">
+            </button>
+            <button class="c-button--red c-button--mid u-mt-19">お問い合わせ</button>
+        </div>
+    </section>
     <footer id="footer">
         <div class="main-wrapper footer-wrapper">
             <nav class="footer__nav">
                 <ul>
-                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">ホーム</a></li>
-                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">料金</a></li>
-                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">ブログ</a></li>
-                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">お知らせ</a></li>
-                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">卒業実績</a></li>
+                    <li><a href="./index.html" class="u-font--white u-font--bold">ホーム</a></li>
+                    <li><a href="./plan.html" class="u-font--white u-font--bold">料金</a></li>
+                    <li><a href="./blog_list.html" class="u-font--white u-font--bold">ブログ</a></li>
+                    <li><a href="./notice_list.html" class="u-font--white u-font--bold">お知らせ</a></li>
+                    <li><a href="./result_list.html" class="u-font--white u-font--bold">卒業実績</a></li>
                 </ul>
             </nav>
             <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
