--- a/MusicSchool/_static/src/plan.html
+++ b/MusicSchool/_static/src/plan.html
@@ -52,7 +52,7 @@
         <nav class="hamburger-nav">
             <ul class="hamburger-list">
                 <li><a href="./plan.html" class="c-hamburger-item hamburger-trigger">料金</a></li>
-                <li><a href="#blog" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
+                <li><a href="./blog_list.html" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
                 <li><a href="#information" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
                 <li><a href="#result" class="c-hamburger-item hamburger-trigger">卒業実績</a></li>
             </ul>
@@ -61,8 +61,8 @@
     <div class="c-hamburger-bg hamburger-trigger">
     </div>
     <section id="plan-fv" class="js-fv">
-        <div class="plan__fv-img">
-            <h1 class="plan__message u-font--white u-font--bold">
+        <div class="plan__fv-img c-fv__img">
+            <h1 class="plan__message u-font--white u-font--bold c-fv__message">
                 プラン・料金
             </h1>
         </div>
