--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -37,9 +37,9 @@
         <nav class="c-nav pc header__nav">
             <ul class="c-nav-list">
                 <li><a href="./plan.html" class="nav-item">料金</a></li>
-                <li><a href="#blog" class="nav-item">ブログ</a></li>
-                <li><a href="#information" class="nav-item">お知らせ</a></li>
-                <li><a href="#result" class="nav-item"></a>卒業実績</li>
+                <li><a href="./blog_list.html" class="nav-item">ブログ</a></li>
+                <li><a href="#" class="nav-item">お知らせ</a></li>
+                <li><a href="./result_list.html" class="nav-item"></a>卒業実績</li>
             </ul>
         </nav>
         <button class="pc c-button c-button--red c-button--small header__button">
@@ -50,9 +50,9 @@
         <nav class="hamburger-nav">
             <ul class="hamburger-list">
                 <li><a href="./plan.html" class="c-hamburger-item hamburger-trigger">料金</a></li>
-                <li><a href="#blog" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
+                <li><a href="/blog_list.html" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
                 <li><a href="#information" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
-                <li><a href="#result" class="c-hamburger-item hamburger-trigger">卒業実績</a></li>
+                <li><a href="./result_list.html" class="c-hamburger-item hamburger-trigger">卒業実績</a></li>
             </ul>
         </nav>
     </div>
