--- a/MusicSchool/_static/src/blog_details.html
+++ b/MusicSchool/_static/src/blog_details.html
@@ -60,40 +60,116 @@
     </div>
     <div class="c-hamburger-bg hamburger-trigger">
     </div>
-    <nav class="c-breadcrumb main-wrapper">
-        <ul>
-            <li>
-                <a href="#">ホーム</a>
-            </li>
-            <li>
-                <a href="#">ブログ</a>
-            </li>
-            <li>
-                <a href="#">ギター</a>
-            </li>
-            <li>
-                <a href="#">アルペジオが劇的に向上する3つの習慣</a>
-            </li>
-        </ul>
-    </nav>
-    <!-- カード -->
-    <!-- SNSリンク -->
-    <!-- H2 -->
-    <!-- H3 -->
-    <!-- 前の記事・次の記事 -->
-    <!-- 関連記事 -->
-    <!-- 無料メールマガジン -->
-    <!-- ブログ内を検索 -->
-    <!-- おすすめの記事 -->
-    <!-- カテゴリー -->
-    <section>
-        <div class="no-pc u-pos-fixed u-l-50 u-bottom-0 js-fixed-btn-no-pc">
-            <button class="c-button u-ml-auto js-go-top">
-                <img src="./img/icon/to-top.svg" alt="トップへ戻る">
-            </button>
-            <button class="c-button--red c-button--mid u-mt-19">お問い合わせ</button>
+    <nav class="c-breadcrumb">
+        <div class="header-wrapper">
+            <ul>
+                <li>
+                    <a href="#">ホーム</a>
+                </li>
+                <li>
+                    <a href="#">ブログ</a>
+                </li>
+                <li>
+                    <a href="#">ギター</a>
+                </li>
+                <li>
+                    <a href="#">アルペジオが劇的に向上する3つの習慣</a>
+                </li>
+            </ul>
         </div>
-    </section>
+    </nav>
+    <div class="main-wrapper">
+        <section id="blog-detail-main">
+            <!-- カード -->
+            <div class="c-card blog__card">
+                <a href="#">
+                    <div class="c-card__img-container">
+                        <div class="c-card__label blog__card__label">ギター</div>
+                        <img src="../img/SP/top/blog01.png"
+                            srcset="../img/SP/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                            class="c-card__img blog__card__img no-pc">
+                        <img src="../img/PC/top/blog01.png"
+                            srcset="../img/PC/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                            class="c-card__img blog__card__img pc">
+                    </div>
+                    <h2 class="c-card__title blog__card__title">アルペジオが劇的に向上する3つの習慣</h2>
+                    <p class="c-card__date blog__card__date">2022.01.01</p>
+                </a>
+            </div>
+            <!-- SNSリンク -->
+            <nav class="c-sns-nav blog__sns-nav">
+                <ul class="c-sns-inner">
+                    <li><a href="#" class="c-sns-link">
+                            <img src="../img/icon/sp-blog-facebook.svg" alt="facebook" class="no-pc">
+                            <img src="../img/icon/pc-blog-facebook.svg" alt="facebook" class="pc">
+                        </a>
+                    </li>
+                    <li><a href="#" class="c-sns-link">
+                            <img src="../img/icon/sp-blog-twitter.svg" alt="twitter" class="no-pc">
+                            <img src="../img/icon/pc-blog-twitter.svg" alt="twitter" class="pc">
+                        </a>
+                    </li>
+                    <li><a href="#" class="c-sns-link">
+                            <img src="../img/icon/sp-blog-hatena.svg" alt="hatena" class="no-pc">
+                            <img src="../img/icon/pc-blog-hatena.svg" alt="hatena" class="pc">
+                        </a>
+                    </li>
+                    <li><a href="#" class="c-sns-link">
+                            <img src="../img/icon/sp-blog-line.svg" alt="line" class="no-pc">
+                            <img src="../img/icon/pc-blog-line.svg" alt="line" class="pc">
+                        </a>
+                    </li>
+                    <li><a href="#" class="c-sns-link">
+                            <img src="../img/icon/sp-blog-pocket.svg" alt="pocket" class="no-pc">
+                            <img src="../img/icon/pc-blog-pocket.svg" alt="pocket" class="pc">
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <!-- 導入 -->
+            <p class="c-detail__introduction blog-detail__introduction">
+                本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。
+            </p>
+            <!-- H2（本文） -->
+            <div class="c-detail__main blog-detail__main">
+                <h2>H2見出しが入ります。H2見出しが入ります。</h2>
+                <p>本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。</p>
+                <img src="../img/SP/blog/choice01.png" class="no-pc" alt="声1"
+                    srcset="../img/SP/blog/choice01.png 1x, ../img/SP/blog/choice01@2x.png 2x">
+                <img src="../img/PC/blog/choice01.png" class="pc" alt="声1"
+                    srcset="../img/PC/blog/choice01.png 1x, ../img/PC/blog/choice01@2x.png 2x">
+                <ul>
+                    <li>リストが入ります</li>
+                    <li>リストが入ります</li>
+                    <li>リストが入ります</li>
+                </ul>
+            </div>
+            <!-- H3（まとめ）-->
+            <div class="c-detail__summary blog-detail__summary">
+                <h3>H3見出しが入ります。H3見出しが入ります。</h3>
+                <div class="c-detail__quote">
+                    <img src="../img/icon/quote.svg" alt="quote" class="c-detail__quote__icon">
+                    <p class="c-detail__quote__text">
+                        本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。</p>
+                </div>
+                <a href="#" class="c-detail__back-link">テキストリンク</a>
+            </div>
+        </section>
+        <!-- 前の記事・次の記事 -->
+        <!-- 関連記事 -->
+        <!-- 無料メールマガジン -->
+        <!-- ブログ内を検索 -->
+        <!-- おすすめの記事 -->
+        <!-- カテゴリー -->
+        <section>
+            <div class="no-pc u-pos-fixed u-l-50 u-bottom-0 js-fixed-btn-no-pc">
+                <button class="c-button u-ml-auto js-go-top">
+                    <img src="./img/icon/to-top.svg" alt="トップへ戻る">
+                </button>
+                <button class="c-button--red c-button--mid u-mt-19">お問い合わせ</button>
+            </div>
+        </section>
+    </div>
     <footer id="footer">
         <div class="main-wrapper footer-wrapper">
             <nav class="footer__nav">
