--- a/MusicSchool/_static/src/blog_details.html
+++ b/MusicSchool/_static/src/blog_details.html
@@ -73,7 +73,7 @@
                     <a href="#">ギター</a>
                 </li>
                 <li>
-                    <a href="#">アルペジオが劇的に向上する3つの習慣</a>
+                    <a href="#">アルペジオが劇的に向上する３つの習慣</a>
                 </li>
             </ul>
         </div>
@@ -81,7 +81,7 @@
     <div class="main-wrapper">
         <section id="blog-detail-main">
             <!-- カード -->
-            <div class="c-card blog__card">
+            <div class="c-card blog-detail__card">
                 <a href="#">
                     <div class="c-card__img-container">
                         <div class="c-card__label blog__card__label">ギター</div>
@@ -93,11 +93,11 @@
                             class="c-card__img blog__card__img pc">
                     </div>
                     <h2 class="c-card__title blog__card__title">アルペジオが劇的に向上する3つの習慣</h2>
-                    <p class="c-card__date blog__card__date">2022.01.01</p>
+                    <p class="c-card__date blog-detail__card__date">2022.01.01</p>
                 </a>
             </div>
             <!-- SNSリンク -->
-            <nav class="c-sns-nav blog__sns-nav">
+            <nav class="c-sns-nav blog-detail__sns-nav">
                 <ul class="c-sns-inner">
                     <li><a href="#" class="c-sns-link">
                             <img src="../img/icon/sp-blog-facebook.svg" alt="facebook" class="no-pc">
@@ -156,8 +156,100 @@
             </div>
         </section>
         <!-- 前の記事・次の記事 -->
+        <nav class="c-linear-nav">
+            <ul class="c-linear-nav__list">
+                <li>
+                    <a href="#" class="c-linear-nav__link-item">
+                        <div class="c-linear-nav__item">
+                            <div class="c-linear-nav__item__label">◀︎ 前の記事</div>
+                            <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="c-linear-nav__link-item">
+                        <div class="c-linear-nav__item">
+                            <div class="c-linear-nav__item__label">次の記事 ▶︎</div>
+                            <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </nav>
         <!-- 関連記事 -->
+        <section id="blog-detail__rel-article">
+            <h2 class="c-section__title">
+                関連記事
+            </h2>
+            <div class="c-card-list">
+                <div class="c-card blog__card blog-detail__card">
+                    <a href="#">
+                        <div class="c-card-flex blog-detail__card--flex">
+                            <div class="c-card__img-container">
+                                <div class="c-card__label blog-detail__card__label">ギター</div>
+                                <img src="../img/SP/top/blog03.png"
+                                    srcset="../img/SP/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像03"
+                                    class="c-card__img no-pc">
+                                <img src="../img/PC/top/blog03.png"
+                                    srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像03"
+                                    class="c-card__img blog__card__img pc">
+                            </div>
+                            <div class="c-card__txt-container">
+                                <h2 class="c-card__title blog-detail__card__title">タイトルが入ります。タイトル</h2>
+                                <p class="c-card__date blog-detail__card__date">2022.01.01</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="c-card blog__card blog-detail__card">
+                    <a href="#">
+                        <div class="c-card-flex blog-detail__card--flex">
+                            <div class="c-card__img-container">
+                                <div class="c-card__label blog-detail__card__label">ギター</div>
+                                <img src="../img/SP/top/blog03.png"
+                                    srcset="../img/SP/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像03"
+                                    class="c-card__img no-pc">
+                                <img src="../img/PC/top/blog03.png"
+                                    srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像03"
+                                    class="c-card__img blog__card__img pc">
+                            </div>
+                            <div class="c-card__txt-container">
+                                <h2 class="c-card__title blog-detail__card__title">タイトルが入ります。タイトル</h2>
+                                <p class="c-card__date blog-detail__card__date">2022.01.01</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="c-card blog__card blog-detail__card">
+                    <a href="#">
+                        <div class="c-card-flex blog-detail__card--flex">
+                            <div class="c-card__img-container">
+                                <div class="c-card__label blog-detail__card__label">ギター</div>
+                                <img src="../img/SP/top/blog03.png"
+                                    srcset="../img/SP/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像03"
+                                    class="c-card__img no-pc">
+                                <img src="../img/PC/top/blog03.png"
+                                    srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像03"
+                                    class="c-card__img blog__card__img pc">
+                            </div>
+                            <div class="c-card__txt-container">
+                                <h2 class="c-card__title blog-detail__card__title">タイトルが入ります。タイトル</h2>
+                                <p class="c-card__date blog-detail__card__date">2022.01.01</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
         <!-- 無料メールマガジン -->
+        <section id="blog-detail__ad">
+            <h2 class="c-section__title">
+                無料メールマガジン
+            </h2>
+            <div class="blog-detail__ad__content">
+                バナー広告
+            </div>
+        </section>
         <!-- ブログ内を検索 -->
         <!-- おすすめの記事 -->
         <!-- カテゴリー -->
