--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -50,8 +50,8 @@
         <nav class="hamburger-nav">
             <ul class="hamburger-list">
                 <li><a href="./plan.html" class="c-hamburger-item hamburger-trigger">料金</a></li>
-                <li><a href="/blog_list.html" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
-                <li><a href="#information" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
+                <li><a href="./blog_list.html" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
+                <li><a href="./notice_list.html" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
                 <li><a href="./result_list.html" class="c-hamburger-item hamburger-trigger">卒業実績</a></li>
             </ul>
         </nav>
@@ -360,9 +360,9 @@
                 <ul>
                     <li><a href="./index.html" class="u-font--white u-font--bold footer__nav__item">ホーム</a></li>
                     <li><a href="./plan.html" class="u-font--white u-font--bold footer__nav__item">料金</a></li>
-                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">ブログ</a></li>
-                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">お知らせ</a></li>
-                    <li><a href="#" class="u-font--white u-font--bold footer__nav__item">卒業実績</a></li>
+                    <li><a href="./blog_list.html" class="u-font--white u-font--bold footer__nav__item">ブログ</a></li>
+                    <li><a href="./notice_list.html" class="u-font--white u-font--bold footer__nav__item">お知らせ</a></li>
+                    <li><a href="./result_list.html" class="u-font--white u-font--bold footer__nav__item">卒業実績</a></li>
                 </ul>
             </nav>
             <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
