add notice-detail before pixcel perfect

--- a/MusicSchool/_static/src/blog_details.html
+++ b/MusicSchool/_static/src/blog_details.html
@@ -53,7 +53,7 @@
             <ul class="hamburger-list">
                 <li><a href="./plan.html" class="c-hamburger-item hamburger-trigger">料金</a></li>
                 <li><a href="./blog_list.html" class="c-hamburger-item hamburger-trigger">ブログ</a></li>
-                <li><a href="#information" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
+                <li><a href="./notice_list.html" class="c-hamburger-item hamburger-trigger">お知らせ</a></li>
                 <li><a href="./result_list.html" class="c-hamburger-item hamburger-trigger">卒業実績</a></li>
             </ul>
         </nav>
@@ -129,7 +129,8 @@
                         </ul>
                     </nav>
                     <!-- 導入 -->
-                    <p class="c-detail__introduction blog-detail__introduction">
+                    <div class="c-detail__introduction blog-detail__introduction"></div>
+                    <p>
                         本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。
                     </p>
                     <!-- H2（本文） -->
